# CFD_Solver_withCUDA

./: .gitignore  BC_LIMITER_CUDA_IMPLEMENTATION.md  CMakeLists.txt  CMakeLists_Colab.txt  CMakeLists_test.txt  COLAB_COMPILATION_GUIDE.md  CONNECT_TO_COLAB.md  CONTRIBUTING.md  CUDA_IMPLEMENTATION_STATUS_AND_ROADMAP.md  Colab_VSCode_Setup.ipynb  DEPLOYMENT_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  Doxyfile  Doxyfile.bak  Doxyfile_Cleaned  GIT_UPDATE_SUMMARY.md  Grid_Optimization_Performance_Report.md  Makefile.test  NEW_KERNELS_INTEGRATION_GUIDE.md  PRIORITY_1_2_IMPLEMENTATION_SUMMARY.md  PROJECT_REPORT.md  PROJECT_STATUS_UPDATE.md  QUICK_REFERENCE.md  Quick_CUDA_Test_Colab.ipynb  README.md  Read_Gmsh_GridFiles.cpp  START_HERE_COLAB_TESTING.md  TESTING_AND_VALIDATION_PLAN.md  TEST_SUMMARY.md  Test_CUDA_Kernels_Colab.ipynb  VSCODE_COLAB_CONNECTION_GUIDE.md  VSCODE_COLAB_EXTENSION_GUIDE.md  WENO2D_Validation_Report.md  boolean_test  doxygen_log.txt  full_vtk_test  intensive_grid_performance_test.cpp  intensive_test  quick_integration_example  quick_integration_example.cpp  (+20 more)
2D_Half_Cylinder_Generate/: Half_Cylinder  Half_Cylinder.cpp  Make_dependencies  Make_dependencies.bak  Makefile  gmon.out
Basic_Function_Files/: .directory  AUSM.cpp  CUSP.cpp  Cell.cpp  Cell_Dissipation.cpp  Cell_Geometry.cpp  Cell_Viscous_functions.cpp  Circle.cpp  Circle.cpp~  Cylinder.cpp  Cylinder.cpp~  Cylinder_Extension.cpp  Data_Analyze.cpp  Edge.cpp  Face.cpp  Face_Functions.cpp  Face_Functions_Ver2.cpp  Field_Vectors.cpp  Geometry_Header.h  Geometry_Header.h~  Global_Functions.cpp  Grid_Gen_Functions.cpp  Line.cpp  Numerical_Schemes.cpp  Point.cpp  Shape_Generate.cpp  Test_Cases.cpp  Test_Cell_Numbering  Test_Cell_Numbering.cpp  Test_Grid_Generator.cpp  Test_Line.cpp  Utility_Files.cpp  Utility_Files.cpp~  Vanleer_Scheme.cpp  a.out  dyld.h  gridgen_Elliptic_TFI.cpp  gridgen_Elliptic_TFI.cpp~  headers.hpp  headers.hpp~  (+2 more)
CUDA_KERNELS/: Advanced_Flux_Schemes_Cuda.h  Advanced_Flux_Schemes_Cuda_Wrappers.cu  Advanced_Optimizations_Cuda.cu  Boundary_Conditions_Cuda_Kernels.cu  Boundary_Conditions_Cuda_Kernels.h  Boundary_Conditions_Cuda_Wrappers.cu  CUDA_Integrated_Numerical_Method.cpp  Cuda_Kernel_Utilities.h  Cuda_Kernels.h  Cuda_Parallel_RK.cpp  Dissipation_Cuda_Kernel.cpp  Flux_Calculations_Cuda_Kernels.cu  Geometry_Cuda_Kernels.cu  Gradient_Calculation_Cuda_Kernels.cu  Grid_CUDA_Integration_Example.cpp  Grid_Cuda_Host_Wrappers.cpp  Grid_Cuda_Kernels.cu  Grid_Cuda_Kernels.h  HLLC_LLF_Flux_Cuda_Kernels.cu  Iterative_Solver_Cuda_Kernels.cu  Limiter_Cuda_Kernels.cu  Limiter_Cuda_Kernels.h  Limiter_Cuda_Wrappers.cu  Linear_Algebra_Cuda_Kernels.cu  MUSCL_WENO_Reconstruction_Cuda_Kernels.cu  Matrix_Assembly_CUDA_Integration_Example.cpp  Matrix_Assembly_Cuda_Host_Wrappers.cpp  Matrix_Assembly_Cuda_Kernels.cu  Matrix_Assembly_Cuda_Kernels.h  Reconstruction_Schemes_Cuda.h  Reconstruction_Schemes_Cuda_Wrappers.cu  Roe_Flux_Cuda_Kernels.cu  Time_Integration_Cuda_Kernels.cu  Viscous_Flux_Cuda_Kernels.cu
Flow_Over_Cylinder/: Flow_Over_Cylinder (RAMESH KOLLURU's conflicted copy 2024-02-29 1).cpp  Flow_Over_Cylinder.cpp  Generate_Flow_Over_Cylinder  Make_dependencies  Make_dependencies.bak  Makefile  gmon.out
Gmsh_Grids/: 32RHNVCS.py  CMakeLists.txt  CMakeLists1.txt  Check_Boundary_info.py  Convert_Tri_to_Quad.cpp  Cylinder  Cylinder.geo  Cylinder.msh  Cylinder.vtk  Cylinder1.geo  Cylinder1.msh  Cylinder1.vtk  Cylinder_Domain.geo  Cylinder_Geo_2.geo  Cylinder_goo1.geo  Cylinder_mesh2.msh  Cylinder_mesh2.vtk  FindQuadNeighbors.cpp  Find_OnlyQuads_Neighbours.cpp  Find_OnlyQuads_Neighbours_1.cpp  Find_OnlyQuads_Neighbours_2.cpp  GMSH_VTK.py  IdentifyCellsAndNeighbors.cpp  Identify_Boundaries  Identify_Boundaries.cpp  Identify_Cell_Types.py  Income_Tax_Calculator.csv  Python_GMsh.py  Python_GMsh.txt  TestVTK.cpp  Test_Domain.geo  Test_Domain.msh  Test_Domain.vtk  Test_Domain_Structured.geo  Test_Domain_Structured.msh  Test_Domain_Structured.vtk  Test_Domain_Structured_With_Elements.vtk  Test_Domain_Triangle.vtk  VTK_CellID_Pandas.py  VTK_CellIdentify.py  (+22 more)
Incompressible_Solver/: CType_Elliptic_Grid.cpp  CType_Elliptic_Grid_Modified.cpp  Grid_Cylinder.cpp  Implicit_Momentum.cpp  Incompressible_Main.cpp  Incompressible_NS.cpp  Incompressible_Solver.cpp  Incompressible_Solver.h  Incompressible_Solver_Standalone.cpp  Incompressible_Solver_Standalone.h  Incompressible_Utilities.cpp  Makefile  Poission.py  Poission_FDM.py  Poission_Solver.cpp  Pressure_Correction.cpp  README.md  Sampel_Functions.cpp  SemiImplicit_Momentum_Solver.cpp  config_example.json  incompressible_globals.cpp  test_standalone.cpp
Laplace_Solver/: Laplace.cpp  Laplace.h
MPI_Src/: MPI_Numerical_Method.cpp
Main/: makefile
Parallel_Method_Kernels/: Parallel_Net_Flux_Evaluation.cpp  Parallel_Numerical_Method.cpp
Python_Wrapper/: Euler_Python_Wrapper.cpp  Implict_Solver.py  Setup.py  Test_Jacobian.py  four_unitary_cvqls.py  ud4_mpi_qulacs_opp2.py  ud4_qulacs_oop.py
Test_Cases/: Air_Foil.cpp  Channel_Flow.cpp  Ellinga_TestCase.cpp  Flat_Plate_Boundary_Layer.cpp  Flow_Over_Bump.cpp  Forward_Facing_Step.cpp  Half_Cylinder_Test_Case.cpp  OED.cpp  Ramp_15_Degree.cpp  SWBLI.cpp  Scram_Jet_Inlet_Test_Case.cpp  Shock_Bubble_Interaction.cpp  Shock_Diffraction.cpp  Shock_Reflection_2D.cpp  Shock_Tube_2D.cpp  Shock_Wedge_Reflection.cpp  Slip_Flow_2D.cpp  Turbulent_Flat_Plate_Validation.cpp  Utility_Files_Scram_Jet.cpp
Unit_Test_Codes/: Euler_solver  OpenCL_Loop_Parallelization.cpp  Test_Cell.cpp  Test_Co_Volume.cpp  Test_Gmsh_Reader  Test_Gmsh_Reader.cpp  Timestep.txt  makefile  output.txt
VTK_Grid_Tests/: README.md  boolean_test.cpp  comprehensive_vtk_test.cpp  full_vtk_test.cpp  test_load_mesh.cpp
cmake/: CudaMatrixAssembly.cmake
docs/: ADAPTIVE_MESH_REFINEMENT.md  AUSM_Flux_Completion_Summary.md  AUSM_Flux_Implementation.md  Assemble_Matrix_Fix_Summary.md  BUILD_AND_RUN.md  CONFIGURATION.md  CUDA_Matrix_Assembly_Documentation.md  CUDA_Matrix_Assembly_Summary.md  Documentation_Update_Completion_Summary.md  DoxygenMainPage.cpp  MESH_AND_GRID.md  (+17 more)
(+43783 files in other folders)
